WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220700
[JSC] earlyReturnFromInfiniteLoopsLimit should check all caller functions when emitting
https://bugs.webkit.org/show_bug.cgi?id=220700
Summary
[JSC] earlyReturnFromInfiniteLoopsLimit should check all caller functions whe...
Yusuke Suzuki
Reported
2021-01-17 23:10:43 PST
[JSC] earlyReturnFromInfiniteLoopsLimit should check all caller functions when emitting
Attachments
Patch
(5.91 KB, patch)
2021-01-17 23:12 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(5.97 KB, patch)
2021-01-17 23:50 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-01-17 23:12:09 PST
Created
attachment 417801
[details]
Patch
Yusuke Suzuki
Comment 2
2021-01-17 23:12:12 PST
<
rdar://problem/71229150
>
Yusuke Suzuki
Comment 3
2021-01-17 23:50:52 PST
Created
attachment 417804
[details]
Patch
Mark Lam
Comment 4
2021-01-18 13:41:36 PST
Comment on
attachment 417804
[details]
Patch r=me
EWS
Comment 5
2021-01-18 16:08:00 PST
Committed
r271592
: <
https://trac.webkit.org/changeset/271592
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417804
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug