[JSC] earlyReturnFromInfiniteLoopsLimit should check all caller functions when emitting https://bugs.webkit.org/show_bug.cgi?id=220700 <rdar://problem/71229150>

Reviewed by Mark Lam.

JSTests:

* stress/early-return-from-builtin.js: Added.
(let.o.get value):
(let.iter.Symbol.iterator):
* stress/early-return-from-builtin2.js: Added.
(foo):

Source/JavaScriptCore:

earlyReturnFromInfiniteLoopsLimit does not return when the function is builtin. But this does not consider about the case that
the caller is inlining and the caller is builtin. Since this returns from entire DFG / FTL functions, we should check any of
callers are not builtin functions too.

* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileLoopHint):


Canonical link: https://commits.webkit.org/233128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271592 268f45cc-cd09-0410-ab3c-d52691b4dbfc